--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,111 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;500;600;700&family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800&family=PT+Sans+Narrow:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 * {
-       background-color: black;
+       background-color: white;
        margin: 0;
+}
+
+/* Light Mode */
+
+@media (prefers-color-scheme: light) {
+       * {
+              background-color: #ffffff;
+       }
+
+       
+
+       #yname {
+              color: black;
+              font-family: 'Barlow Condensed', sans-serif;
+              font-size: 24px;
+              font-weight: 400;
+              letter-spacing: -.06em;
+              padding-left: 2px
+       }
+
+       #bar__btn1 {
+              background-color: rgb(92, 89, 89);
+              border-radius:6px;
+              cursor:pointer;
+              color:#ffffff;
+              font-family: 'Roboto', sans-serif;
+              font-size:15px;
+              padding: 6px 18px;
+              
+       }
+       
+       #bar__btn2 {
+              background-color:#ffffff;
+              border-radius:6px;
+              cursor:pointer;
+              color:#000000;
+              font-family: 'Roboto', sans-serif;
+              font-size:15px;
+              padding:6px 16px;
+              margin-right: 2px;
+       }
+}
+
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+       * {
+              background-color: black;
+       }
+
+       .header {
+              color: #ffffff;
+       }
+
+       .header2 {
+              color: #ffffff;
+       }
+
+       .yt__footer {
+              color: #ffffff;
+       }
+
+       .img__icon {
+              fill: #ffffff; 
+       }
+
+       #video__title {
+              color: #000000;
+       }
+
+       #video__title {
+                     color: #ffffff;
+       }
+
+       #yname {
+              color: rgb(255, 255, 255);
+              font-family: 'Barlow Condensed', sans-serif;
+              font-size: 24px;
+              font-weight: 400;
+              letter-spacing: -.06em;
+              padding-left: 2px
+       }
+
+       #bar__btn1 {
+              background-color:#000000;
+              border-radius:6px;
+              cursor:pointer;
+              color:#ffffff;
+              font-family: 'Roboto', sans-serif;
+              font-size:15px;
+              padding: 6px 18px;
+              
+       }
+       
+       #bar__btn2 {
+              background-color:#ffffff;
+              border-radius:6px;
+              cursor:pointer;
+              color:#000000;
+              font-family: 'Roboto', sans-serif;
+              font-size:15px;
+              padding:6px 16px;
+              margin-right: 2px;
+       }
 }
 
 /* Top Header */
@@ -28,14 +131,7 @@
        padding-right: 20px;
 }
 
-#yname {
-       color: white;
-       font-family: 'Barlow Condensed', sans-serif;
-       font-size: 24px;
-       font-weight: 400;
-       letter-spacing: -.06em;
-       padding-left: 2px
-}
+
 
 /*  Second Header */
 .header2 {
@@ -60,27 +156,7 @@
        display: flex-end;      
 }
 
-#bar__btn1 {
-	background-color:#ffffff;
-	border-radius:6px;
-	cursor:pointer;
-	color:#000000;
-	font-family: 'Roboto', sans-serif;
-	font-size:15px;
-	padding: 6px 18px;
-       
-}
 
-#bar__btn2 {
-	background-color:#000000;
-	border-radius:6px;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: 'Roboto', sans-serif;
-	font-size:15px;
-	padding:6px 16px;
-       margin-right: 2px;
-}
 
 /* 1st YouTube Video */
 .youtube__vid {
@@ -97,9 +173,7 @@
        display: flex;
 }
 
-#video__title {
-       color: #ffffff;
-}
+
 
 #thumbnails {
        border-radius: 50%;
@@ -112,3 +186,5 @@
 #view__subs {
 
 }
+
+
