--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@
               padding:6px 16px;
               margin-right: 2px;
        }
+
+       #video__title {
+              color: #000000;
+       }
 }
 
 /* Dark Mode */
@@ -62,15 +66,18 @@
 
        .yt__footer {
               color: #ffffff;
+              
        }
 
-       .img__icon {
-              fill: #ffffff; 
+       #img__icon1 {
+              fill: #ffffff;
+              color: #ffffff;
        }
 
-       #video__title {
-              color: #000000;
+       #img__icon {
+              fill: #ffffff;
        }
+       
 
        #video__title {
                      color: #ffffff;
@@ -78,11 +85,7 @@
 
        #yname {
               color: rgb(255, 255, 255);
-              font-family: 'Barlow Condensed', sans-serif;
-              font-size: 24px;
-              font-weight: 400;
-              letter-spacing: -.06em;
-              padding-left: 2px
+              
        }
 
        #bar__btn1 {
@@ -108,7 +111,7 @@
        }
 }
 
-/* Top Header */
+/* Navbar Header */
 .header {
        display: flex;
        flex-direction: row;
@@ -116,6 +119,7 @@
        flex-wrap: nowrap;
        margin: 5px; 
        padding-top: 8px;
+       align-items: center;
 }
 
 .left {
@@ -127,8 +131,9 @@
        padding-right: 10px;       
 }
 
-#search__icon {
+.fa-magnifying-glass {
        padding-right: 20px;
+
 }
 
 
@@ -177,6 +182,16 @@
 
 #thumbnails {
        border-radius: 50%;
+       display: flex;
+}
+
+#yname {
+       display: flex;
+       font-family: 'Barlow Condensed', sans-serif;
+       font-size: 24px;
+       font-weight: 400;
+       letter-spacing: -.06em;
+       padding-left: 2px
 }
 
 #ytuber__name {
