--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
        }
        
        #bar__btn2 {
-              background-color:#e1e4ea;
+              background-color:#FFFFFF;
               border-radius:6px;
               color:#0F0F0F;
               font-family: 'Roboto', sans-serif;
