--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,16 @@
     color: #0f0f0f;
   }
 
+  #bar__btn2a {
+    background-color: #e8e8e8;
+    color: #0f0f0f;
+  }
+
+  #bar__btn2b {
+    background-color: #e8e8e8;
+    color: #0f0f0f;
+  }
+
   .ytuber__nav {
     border-bottom: #dedede73 solid 2px;
   }
@@ -187,7 +197,25 @@
   text-decoration: none;
 }
 
-/* 1st YouTube Video */
+#bar__btn2a {
+  border-radius: 6px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  padding: 8px 15px;
+  margin-right: 2px;
+  text-decoration: none;
+}
+
+#bar__btn2b {
+  border-radius: 6px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  padding: 8px 15px;
+  margin-right: 2px;
+  text-decoration: none;
+}
+
+/* YouTube Video */
 .youtube__vid {
   display: flex;
 }
@@ -293,7 +321,7 @@ h3 {
 }
 
 .body-content {
-  padding-bottom: 90px;
+  padding-bottom: 60px;
 }
 /* ------- Footer ------ */
 
@@ -330,4 +358,87 @@ p {
   justify-content: space-around;
   margin: 0;
   padding: 0;
+}
+
+/* -----------Responsive Media Queries----------- */
+
+/* Max up to 482px small phone */
+@media only screen and (max-width: 482px) {
+  #bar__btn2a {
+    display: none;
+  }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  #bar__btn2b {
+    display: none;
+  }
+
+  .video__shorts {
+    display: flex;
+    justify-content: center;
+  }
+
+  .iframe {
+    gap: 2.5rem;
+  }
+
+  .ytuber__nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .yt__info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up to 767px) */
+@media only screen and (min-width: 600px) {
+  #bar__btn2c {
+    display: none;
+  }
+
+  .video__shorts {
+    display: flex;
+    justify-content: center;
+  }
+
+  .iframe {
+    gap: 2.5rem;
+  }
+
+  .ytuber__nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .yt__info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .yt__banner {
+    width: 700px;
+  }
+
+  #ytuber {
+    border-radius: 10px;
+    
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up to 991px) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up to 1199px) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up to 1920px) */
+@media only screen and (min-width: 1200px) {
 }
