--- a/css/styles.css
+++ b/css/styles.css
@@ -294,10 +294,11 @@
 
 .ytuber__nav {
   display: flex;
-  padding: 5px 0px 5px 0px;
+  
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
+  width: 90%;
+  padding-left: 10px;
 }
 
 .yt__left {
@@ -318,8 +319,7 @@
   display: flex;
   align-content: center;
   padding-left: 10px;
-  padding-right: 10px;
-  margin: 0;
+  margin-right: 5px;
   align-items: center;
 }
 
@@ -500,6 +500,7 @@ p {
   .ytuber__nav {
     display: flex;
     justify-content: space-between;
+    
   }
   .yt__info {
     display: flex;
